--- a/css/style.css
+++ b/css/style.css
@@ -139,23 +139,16 @@ footer {
   padding: 10px;
   text-align: center; }
 
-select {
-  width: 90%;
+button {
+  outline: none;
+  border: 0;
+  padding: 6.5px;
+  background-color: black;
+  color: white;
+  font-size: 17px;
+  font-weight: bold;
+  border-radius: 3px; }
+
+.miniCuestionario {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  min-width: 15ch;
-  max-width: 30ch;
-  border: 1px solid black;
-  border-radius: 0.25em;
-  padding: 0.25em 0.5em;
-  font-size: 1.25rem;
-  cursor: pointer;
-  line-height: 1.1;
-  background-color: #fff;
-  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-  justify-content: center;
-  outline: none; }
-  select option {
-    min-width: 15ch;
-    max-width: 30ch; }
+  flex-direction: column; }
